Date	Added
12/21
	* Added #zeny, removed @charzeny [MC Cameri]
	* Since conf/maps_list.txt was removed, added conf/maps_athena.conf [Ajarn]
	* Fixed a few NPCs that were giving curly errors. It seems to be caused by a bug that the NPCs' last line isn't read or something [Codemaster]
	* Fixed a tiny compile warning in npc.c [Codemaster]
	* Allowed the NPCs without proper curly brackets to still load, but give an error still [Codemaster]
	* Added variable 'current_file' which tells the filename of the script while loading npcs [MC Cameri]
	  -the variable its set in do_init_npc() or something like that, so you can only access it
	   after the use of do_init_npc().
	* Fixed the display of a warning saying that a right curly brace was missing [MC Cameri]
	* Removed @charwarp and @rura+ and added #warp, #rura, #rura+ [MC Cameri]
	* Removed conf/npcs_list.txt, and placed it in npc/npcs_athena.conf [MC Cameri]
        * Moved some code in pc_break_equip that was causing compile errors [celest]
	* guild skills vanished due to incorrect placement of a 
	  check for quest skills in the calc_skilltree code [MouseJstr]
	* Fixed skill LK_HEADCRUSH, LK_JOINTBEAT to work on both on 
	  and off peco's for lord knights (fixed typo in
	  skill_tree.txt) [MouseJstr]
	* removed LK_SPIRALPIERCE from lord knights not on peco's[MouseJstr]
	* Moved the code from map_quit to pc_makesavestatus that
	  "adjusts" the skill tree before persisting to the character
	  server [MouseJstr]
	* made pc_makesavestatus() properly persist skills that are 
          unavailable but not forgotten (example, spiral pierce).  You can now
	  get spiral pierce,  get off your peco, log out, log in, and
	  get back on your peco and still have not lost the skill
	  points you invested.  This also solves the problems of when
	  the skill tree gets changed, players loosing the points. [MouseJstr]
	* Made pc_resetskill() properly reset skills that are